[package]
name = "mgr_map_extractor"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
osmpbfreader = "0.16.0"
log = "0.4.20"


[dev-dependencies]
smartstring = "1.0.1"