[package]
name = "mgr_route_generator"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fern.workspace = true
log.workspace = true
mgr_map_extractor = { path = "../extractor" }
mgr_weather = { path = "../weather" }
osmpbfreader = "0.16.0"
rand = "0.8.5"

